wine brwing yanwi fill

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	// Add specific brewing module
+	include(modImplementation("net.fabricmc.fabric-api:fabric-registry-sync-v0:${project.fabric_api_version}"))
 	
 }
 
