--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url = "https://api.modrinth.com/maven" }
 }
 
 fabricApi {
@@ -34,6 +35,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 	// Add specific brewing module
 	include(modImplementation("net.fabricmc.fabric-api:fabric-registry-sync-v0:${project.fabric_api_version}"))
+	modImplementation "maven.modrinth:shieldlib:${project.fabric_shield_lib_version}"
 	
 }
 
@@ -82,5 +84,9 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+		maven { url = "https://api.modrinth.com/maven" }
+	}
+	loom {
+		accessWidenerPath = file("src/main/resources/geocraft.accesswidener")
 	}
 }
