--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ archives_base_name=geocraft
 
 # Dependencies
 fabric_api_version=0.136.1+1.21.8
+fabric_shield_lib_version=1.8.3-1.21.8
+
+org.gradle.java.home.version=21
